@@ -1,6 +1,8 @@
 2020-07-26 Luigi Scarso <luigi.scarso@gmail.com>
-    * New value for \tracinglostchars: \tracinglostchars>=3 is a fatal error 
+    * fixed: \tracinglostchars>=3 is an error (no fatal error)
 
+2020-07-26 Luigi Scarso <luigi.scarso@gmail.com>
+    * New value for \tracinglostchars: \tracinglostchars>=3 is a fatal error 
 
 2020-07-12 Luigi Scarso <luigi.scarso@gmail.com>
     * Original reports:
